# base64

./: CMakeLists.txt  main.cpp  tests.cpp
source/: methods.cpp  methods.h  structs.cpp  structs.h
